syntax = "proto3";

package game.v1;

import "common/v1/locale.proto";
import "google/protobuf/timestamp.proto";
import "common/v1/game_system.proto";
import "game/v1/participant.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/game/v1;gamev1";

// Campaign represents a game campaign's configuration.
// This is the "config layer" - settings that rarely change after setup.
message Campaign {
  string id = 1;
  string name = 2;
  common.v1.Locale locale = 3;
  // The game system this campaign uses. Required at creation, immutable.
  common.v1.GameSystem system = 4;
  CampaignStatus status = 5;
  GmMode gm_mode = 6;
  CampaignIntent intent = 7;
  CampaignAccessPolicy access_policy = 8;
  // Number of all participants (GM + PLAYER + future roles) for this campaign.
  int32 participant_count = 9;
  // Number of all characters (PC + NPC + future kinds) for this campaign.
  int32 character_count = 10;
  string theme_prompt = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  // Timestamp when the campaign was completed.
  google.protobuf.Timestamp completed_at = 14;
  // Timestamp when the campaign was archived.
  google.protobuf.Timestamp archived_at = 15;
}

enum CampaignStatus {
  CAMPAIGN_STATUS_UNSPECIFIED = 0;
  DRAFT = 1;
  ACTIVE = 2;
  COMPLETED = 3;
  ARCHIVED = 4;
}

enum GmMode {
  GM_MODE_UNSPECIFIED = 0;
  HUMAN = 1;
  AI = 2;
  HYBRID = 3;
}

enum CampaignIntent {
  CAMPAIGN_INTENT_UNSPECIFIED = 0;
  STANDARD = 1;
  STARTER = 2;
  SANDBOX = 3;
}

enum CampaignAccessPolicy {
  CAMPAIGN_ACCESS_POLICY_UNSPECIFIED = 0;
  PRIVATE = 1;
  RESTRICTED = 2;
  PUBLIC = 3;
}

// CampaignService provides CRUD operations for campaigns.
service CampaignService {
  // Create a new campaign metadata record.
  rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);

  // List campaign metadata records.
  rpc ListCampaigns(ListCampaignsRequest) returns (ListCampaignsResponse);

  // Get a campaign metadata record by ID.
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);

  // End a campaign.
  rpc EndCampaign(EndCampaignRequest) returns (EndCampaignResponse);

  // Archive a campaign.
  rpc ArchiveCampaign(ArchiveCampaignRequest) returns (ArchiveCampaignResponse);

  // Restore a campaign.
  rpc RestoreCampaign(RestoreCampaignRequest) returns (RestoreCampaignResponse);
}

message CreateCampaignRequest {
  // Display name for the campaign.
  string name = 1;

  // Preferred locale for the campaign.
  common.v1.Locale locale = 2;

  // The game system for this campaign. Required.
  common.v1.GameSystem system = 3;

  // The mode of GM participation.
  GmMode gm_mode = 4;

  // Intent for the campaign (e.g. standard, starter, sandbox).
  CampaignIntent intent = 5;

  // Visibility/access policy for the campaign.
  CampaignAccessPolicy access_policy = 6;

  // Optional free-form theme prompt for assistants.
  string theme_prompt = 7;

  // Optional display name for the creator's participant seat.
  string creator_display_name = 8;
}

message CreateCampaignResponse {
  Campaign campaign = 1;
  Participant owner_participant = 2;
  repeated string warnings = 3;
}

message ListCampaignsRequest {
  // The maximum number of campaigns to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 1;

  // A page token received from a prior ListCampaignsResponse.
  string page_token = 2;
}

message ListCampaignsResponse {
  repeated Campaign campaigns = 1;
  string next_page_token = 2;
}

message GetCampaignRequest {
  // The campaign ID to retrieve.
  string campaign_id = 1;
}

message GetCampaignResponse {
  Campaign campaign = 1;
}

message EndCampaignRequest {
  // The campaign ID to end.
  string campaign_id = 1;
}

message EndCampaignResponse {
  Campaign campaign = 1;
}

message ArchiveCampaignRequest {
  // The campaign ID to archive.
  string campaign_id = 1;
}

message ArchiveCampaignResponse {
  Campaign campaign = 1;
}

message RestoreCampaignRequest {
  // The campaign ID to restore.
  string campaign_id = 1;
}

message RestoreCampaignResponse {
  Campaign campaign = 1;
}
